overflow fix

--- a/src/components/home/LandingPage.css
+++ b/src/components/home/LandingPage.css
@@ -90,6 +90,7 @@ p {
   width: 100%;
   height: 100vh;
   z-index: 3;
+  overflow: scroll;
 }
 
 .wave {
